Uploaded image for project: 'Apache NiFi MiNiFi C++'
  1. Apache NiFi MiNiFi C++
  2. MINIFICPP-267

MiNiFiMain crashes and fails to infer MINIFI_HOME if MINIFI_HOME not set

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • None
    • 0.3.0
    • None

    Description

      When launching minifi cmd direcly without setting MINIFI_HOME, minifi tries to infer MINIFI_HOME based on the exe path. This crashes the minifi (CentOS 7.4).

      [main] [info] MINIFI_HOME was not found, determining based on executable path.
      terminate called after throwing an instance of 'std::logic_error'
        what():  basic_string::_S_construct null not valid
      Aborted (core dumped)
      

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            achristianson Andrew Christianson
            achristianson Andrew Christianson
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment