MINIFICPP-267 Make inference of MINIFI_HOME more resilient, and gracefully exit if home value is not valid.